Created the servlet module and added the existing code - not workign at this point.