@@ -54,10 +54,6 @@ subprojects {
         )
     }
 
-    test {
-        jvmArgs '-Xverify:none'
-    }
-
     groovydoc {
         groovyClasspath = configurations.groovyDoc
     }
@@ -92,7 +88,7 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.11'
+    gradleVersion = '2.12'
 }
 
 //
